# shelfcontrol

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  build.rs
frontend/: .env  .env.production  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.mjs  vue.config.js  webpack.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js
frontend/src/components/: Books.vue  Categories.vue  useAppBarHeight.js
frontend/src/plugins/: vuetify.js
src/: build.rs  error.rs  main.rs  scanner.rs  search_result.rs  server.rs  sqlite.rs  test.rs  ttvy.rs
templates/: opds.html  opds.rs.html  opds_aqentry  opds_header  opds_naventry
