[package]
name = "shelfcontrol"
version = "0.1.0"
authors = ["bcorrigan <b.j.corrigan@gmail.com>"]
build = "src/build.rs"
license="GPL-3.0-or-later"
edition = "2018"

[dependencies]
epub = "^1.2"
#epub = { path = "/home/bc/workspace/epub-rs", version = "1.2.0" }
#rusqlite = "0.15.0"
clap = "^2"
tantivy = "^0.12"
walkdir = "^2"
chrono = "^0.4"
rouille = "^3"
serde_json = "^1.0"
serde = "^1.0"
serde_derive = "^1.0"
ammonia = "3"
maplit = "1"
itertools = "^0.9"
failure = "^0.1"
futures = "^0.3"

[build-dependencies]
ructe = "^0.10"
