[package]
name = "shelfcontrol"
version = "0.1.0"
authors = ["bcorrigan <b.j.corrigan@gmail.com>"]
build = "src/build.rs"
license="GPL-3.0-or-later"
edition = "2021"

[dependencies]
epub = { git = "https://github.com/danigm/epub-rs" }
clap = {version = "^4", features=["derive"]}
r2d2 = "^0.8"
r2d2_sqlite = "^0"
tantivy = "^0.16"
rusqlite = "^0.32"
rayon = "^1.5"
walkdir = "^2" 
chrono = {version = "^0.4", features=["serde"]}
rouille = "3"
serde_json = "^1.0"
serde = "^1"
serde_derive = "^1"
ammonia = "4"
maplit = "1" # dead, get rid of it
itertools = "^0.13" #only used for string.join so should look to remove
failure = "^0.1" #deprecated - move to Anyhow or thiserror
futures = "^0.3"
urlencoding = "^2"

[build-dependencies]
ructe = "^0.17"


